# txt-controller

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
includes/TxtController/: Controller.hpp
integrationTests/: CMakeLists.txt  main.cpp
src/: 3rdPartyLibs.cmake  CMakeLists.txt  Controller.cpp
testApplication/: CMakeLists.txt  main.cpp
toolchain/: BuildAndPushToDockerHub.ps1  Dockerfile
unitTests/: CMakeLists.txt  main.cpp
